--- a/search.html
+++ b/search.html
@@ -1,1 +1,7 @@
 <!DOCTYPE html>
+
+
+<form action="/form/submit" method="GET">
+    <input type="text" name="text" class="search" placeholder="Search something">
+    <input type="submit" name="submit" class="submit" value="Search">
+</form>
