added title font color

--- a/search.html
+++ b/search.html
@@ -24,6 +24,10 @@
           background-color: purple;
           color: #ffffff;
       }
+      .title {
+          color: black
+      }
+      
   </style>
  </head>
  <body>
