--- a/search.html
+++ b/search.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <title>Goohgel</title>
+  <p1>Goohgel</p1>
   <style>
       body {
           background-color: steelblue;
@@ -17,22 +18,22 @@
           font-size: 15px;
       }
       .search {
-          width: 75%;
+          width: 80%;
       }
       .submit {
           width: 70px;
           background-color: purple;
           color: #ffffff;
       }
-      .title {
-          color: black
+      h1 {
+          color: black;
       }
       
   </style>
  </head>
  <body>
   <form action="/form/submit" method="GET">
-    <input type="text" name="text" class="search" placeholder="Search something">
+    <input type="text" name="text" class="search" placeholder="Search something!">
     <input type="submit" name="submit" class="submit" value="Search">
   </form>
  </body>
